add server settings support

--- a/assets/www/settings.html
+++ b/assets/www/settings.html
@@ -34,11 +34,11 @@
 					<label for="domain">
 						Server Address:
 					</label>
-					<input type="text" id="settings-domain"/>
+					<input type="text" id="settings-domain" value="http://letshire-dev-yuan.cloudfoundry.com"/>
 					<label for="port">
 						Port:
 					</label>
-					<input type="text" id="settings-port"/>
+					<input type="text" id="settings-port" value="80" disabled/>
 					<fieldset class="ui-grid-a">
 						<div class="ui-block-a"><button id="settings-cancel">Cancel</button></div>
 						<div class="ui-block-b"><button id="settings-save">Save</button></div>
