change current-interview icon

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -76,7 +76,7 @@
 				<div data-role="navbar" data-grid="a">
 					<ul>
 						<li><a id="interviews-refresh" data-icon="refresh" data-rel="external" data-ajax="false">Refresh</a></li>
-						<li><a id="interviews-to-current" data-icon="right" data-rel="external" data-ajax="false">Current Interview</a></li>
+						<li><a id="interviews-to-current" data-icon="check" data-rel="external" data-ajax="false">Current Interview</a></li>
 					</ul>
 				</div>	
 			</div>
