use ng-src instead of src in img tag

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -141,7 +141,7 @@
             <article id="interview-article-attachment" class="scroll">
                 <br>
                 <ul class="anchor">
-                    <li ng-repeat="attachment in attachments"><img src="{{attachment.image_uri}}" class="attachment-image" width="100%" height="auto"><br></li>
+                    <li ng-repeat="attachment in attachments"><img ng-src="{{attachment.image_uri}}" class="attachment-image" width="100%" height="auto"><br></li>
                 </ul>
             </article>
             
