use ng-click to handle the login

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -21,7 +21,7 @@
                 <form class="roundeds">
                     <input type="text" placeholder="Your username" id="main-username" value="admin@local.com" />
                     <input type="password" placeholder="Your password" id="main-password" value="admin" />
-                    <a id="main-login-button" class="button large theme anchor" data-icon="lock">Login</a>
+                    <a id="main-login-button" class="button large theme anchor" data-icon="lock" ng-click="userLogin()">Login</a>
                     <a href="#settings" data-router="section" class="button secondary anchor" data-icon="settings">Settings </a>
                 </form>
             </article>
