some little modification to the UI

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -105,14 +105,14 @@
             <article id="interview-article-basic" class="active">
                 <div class="form">
                     <fieldset>
-                        <input disabled>
+                        <br><br>
                     </fieldset>
                     <fieldset data-icon="user">
                         <label>Name:</label>
                         <input id="interview-details-name" type="text" value="{{candidate.name}}" disabled>
                     </fieldset>
                     <fieldset data-icon="eye">
-                        <label>Apply:</label>
+                        <label>Opening:</label>
                         <input id="interview-details-apply" type="text" value="{{opening.title}}" disabled>
                     </fieldset>
                     <fieldset data-icon="calendar">
