change the interviews list time format

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -45,7 +45,7 @@
                                 next Interview
                             </div>
                             <strong>{{interview.title}}</strong>
-                            <small>{{interview.scheduled_at}} @ {{interview.location}}</small>
+                            <small>{{goodlookingTime(interview)}} -> {{interview.location}}</small>
                         </a>    
                     </li>
                 </ul>    
