--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -20,7 +20,7 @@
                 <br><br><br>
                 <form class="roundeds">
                     <input type="text" placeholder="Your username" id="main-username" value="admin@local.com" />
-                    <input type="password" placeholder="Your password" id="main-password" value="admin" />
+                    <input type="password" placeholder="Your password" id="main-password" value="123456789" />
                     <a id="main-login-button" class="button large theme anchor" data-icon="lock" ng-click="userLogin()">Login</a>
                     <a href="#settings" data-router="section" class="button secondary anchor" data-icon="settings">Settings </a>
                 </form>
@@ -155,6 +155,7 @@
                     <a id="interview-attach-picture" href="" ng-click="attachInterviewPhoto()" data-icon="picture" ></a>
                     <a id="interview-attach-audio" href="" ng-click="attachInterviewAudio()" data-icon="microphone" ></a>
                     <a id="interview-feedback" href="" ng-click="switchToFeedback()" data-icon="pencil" ></a>
+                    <a id="interview-candidate-resume" href="" ng-click="downloadResume()"  data-icon="file"></a>
                 </nav>
             </footer>
         </section>
